# spotify-share-library

./: .gitignore  Dockerfile  README.rst  app.py  now.json  pyproject.toml  requirements.txt  spotify-share-library.py
.github/workflows/: codeql.yml
api/: index.py
