[tool.poetry]
name = "spotify-share-library"
version = "0.2.1"
description = "Keep user's library synced with a shareable playlist on Spotify"
authors = ["Francesco Frassinelli <fraph24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
spotify = {url = "https://github.com/mental32/spotify.py/archive/c52a8d05cc48f02ebcf76afdd4eda893c1ce0855.tar.gz"}
uvicorn = "^0.17.5"
starlette = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
